# bird-is-the-word

./: .gitignore  docker-compose.yaml  go.mod  go.sum  python_pipeline.sh  readme.md  stage_for_transfer.sh
go_src/: bird_says_words.go
python_src/: bird_data_processing.py  bird_db.json  bird_db_links.json  bird_fun_facts.py  generate_search_db.py  get_bird_img_urls.py  post_process_facts.py  pyproject.toml
